--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"js-cookie": "^3.0.5",
 		"svelte": "^5.0.0",
 		"svelte-trigger-action": "^1.18.0",
 		"vite": "^6.0.0"
