--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"gravatar": "^1.8.2",
 		"js-cookie": "^3.0.5",
+		"marked": "^15.0.6",
 		"svelte": "^5.0.0",
 		"svelte-trigger-action": "^1.18.0",
 		"uikit": "^3.22.2",
