--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -17,7 +19,10 @@
 		"js-cookie": "^3.0.5",
 		"marked": "^15.0.6",
 		"svelte": "^5.0.0",
+		"svelte-check": "^4.1.4",
 		"svelte-trigger-action": "^1.18.0",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.3",
 		"uikit": "^3.22.2",
 		"vite": "^6.0.0"
 	}
