--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,8 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/gravatar": "^1.8.6",
+		"@types/uikit": "^3.14.5",
 		"gravatar": "^1.8.2",
 		"js-cookie": "^3.0.5",
 		"marked": "^15.0.6",
