--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: 'Create env file'
         run: |
           touch .env.production
-          echo ${{ env.PUBLIC_SERVER_URL }} > .env
+          echo ${{ vars.PUBLIC_SERVER_URL }} > .env.production
       - name: Build and upload docker image on ghrc.io
         uses: int128/kaniko-action@v1
         with:
