ref(app restructure): major app restructure. Moving away from the workspace (monorepo) setup. We don't need it anyway.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           push: true
           # temporarily use web tag.
-          tags: ghcr.io/${{ github.repository }}/web:${{ github.ref_name }}
+          tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
           labels: ${{ steps.metadata.outputs.labels }}
           cache: true
-          cache-repository: ghcr.io/${{ github.repository }}/web/cache
+          cache-repository: ghcr.io/${{ github.repository }}/cache
