--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,26 +9,35 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Preparing metadata
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v5
         id: metadata
         with:
           images: ghcr.io/${{ github.repository }}
+
       - name: Logging in to ghrc.io
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: 'Create env file'
         run: |
           touch .env.production
           echo PUBLIC_SERVER_URL=${{ vars.PUBLIC_SERVER_URL }} >> .env.production
           echo PUBLIC_DEMO_MODE=${{ vars.PUBLIC_DEMO_MODE }} >> .env.production
+
       - name: Build and upload docker image on ghrc.io
-        uses: int128/kaniko-action@v1
+        uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
           labels: ${{ steps.metadata.outputs.labels }}
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}-cache:${{ github.ref_name }}
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}-cache:${{ github.ref_name }},compression=zstd,mode=max
