--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,9 @@ jobs:
         run: |
           touch .env.production
           echo PUBLIC_SERVER_URL=${{ vars.PUBLIC_SERVER_URL }} >> .env.production
+          echo PUBLIC_CF_ENABLE_TURNSTILE=${{ vars.PUBLIC_CF_ENABLE_TURNSTILE }} >> .env.production
+          echo PUBLIC_CF_ENABLE_TURNSTILE=${{ vars.PUBLIC_CF_ENABLE_TURNSTILE }} >> .env.production
+          echo PUBLIC_CF_TURNSTILE_SITE_KEY=${{ vars.PUBLIC_CF_TURNSTILE_SITE_KEY }} >> .env.production
 
       - name: Build and upload docker image on ghrc.io
         uses: docker/build-push-action@v6
