--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@types/gravatar": "^1.8.6",
     "@types/uikit": "^3.14.5",
+    "buffer": "^6.0.3",
     "gravatar": "^1.8.2",
     "js-cookie": "^3.0.5",
     "marked": "^15.0.6",
+    "otplib": "^12.0.1",
     "prettier": "3.4.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.1.4",
@@ -47,6 +49,7 @@
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "uikit": "^3.22.2",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
